src/extensions/default/edge-code-kuler/styles/kuler.less
/* Colors */
@body-text-color: #666;
@emphasized-text-color: #454545;
@heading-color: #454545;
@link-color: #0083e8;
@tc-light-weight-text: rgba(224, 240, 250, 1);

/* Typography */
@font-weight-semibold: 500;

.kuler {
    display: block;
    position: absolute;
    top: 2px;
    right: 0px;
    left: 440px; // this needs to be set dynamically
    height: 100%;
    overflow-x: hidden;
    font-family: SourceSansPro;
    font-size: 12px;
    font-weight: 400;
    color: @body-text-color;
}


// trying to colorize the kuler links on hover - start

.kuler-dropdown-menu {
    border-radius: 3px;
    box-shadow: 0 3px 9px rgba(0, 0, 0, .3);
    border: none;
    position: absolute;
    display: block;
    max-width: none;
    z-index: 100;
    
    li {
        list-style-type: none;
        
        &:first-child a {
            border-top-left-radius: 3px;
            border-top-right-radius: 3px;
        }

        &:last-child a {
            border-bottom-left-radius: 3px;        
            border-bottom-right-radius: 3px;
        }
    }
    
    .kuler-dropdown-link {
        white-space: nowrap;
        background: white;
        color: @emphasized-text-color;
        display: block;
        padding: 5px 26px 5px 15px;
        text-decoration: none;
        
        &:hover {
            background: @tc-light-weight-text;
            text-decoration: none;
            color: @emphasized-text-color;
        }        
    }
    
    
}

// trying to colorize the kuler links on hover - end

// Used to avoid overlapping CM scrollbar - TODO (#3460): need a cleaner way to do this
@scrollbar-wid: 17px;

.border-fixer-upper {
    &:first-child {
        border-top-left-radius: 3px;
        border-bottom-left-radius: 3px;
    }
    
    &:last-child {
        border-top-right-radius: 3px;
        border-bottom-right-radius: 3px;
    }
}

/* Right-hand column */
.kuler-content {
    position: absolute;
    top: 15px;
    right: 0px;
    left: 0px;
    padding-left: 25px;    // Spacing between columns
    
    h1 {
        color: @heading-color;
        font-size: 16px;
        line-height: 16px;
        margin-top: -4px;
        white-space: nowrap;
    }
    
    .kuler-collection-title {
        color: @heading-color;
        font-size: 16px;
        padding: 5px;
        white-space: nowrap;
        width: 127px;
        position: relative;
        left: -6px;  
        top: -5px;
        &:hover {
            padding: 4px;
            border: 1px solid #9c9e9e;
            border-radius: 3px;
            box-shadow: inset 0 1px 0 white;
        }
    }
    
    .kuler-dropdown-arrow {
        display: inline-block;
        width: 5px;
        height: 9px;
        margin-left: 4px;
        background-image: url("down-arrow.svg");
        background-repeat:no-repeat;
        padding-bottom: 1px;
    }    
    
    .kuler-spacer {
        height: 10px;
    }
    
    .kuler-scroller {
        max-height: 178px;
        overflow-y: auto;
        overflow-x: hidden;
    }
    
    .kuler-scroller:focus {
        outline: none;
    }

    .kuler-no-themes {
        display: none;
        
    }

    .kuler-message {
        display: inline-block;
        padding: 2px 2px 2px 0;
        
        a {
            color: @link-color;
            text-decoration: none;   
        }
    }

    
    .kuler-themes {
        display: none;
        
        .kuler-theme {
            padding: 2px 0;
            clear: both;
            width: 10000px;
            overflow-x: hidden;
            line-height: 18px ! important;

            .kuler-swatch-bg {
                display: inline-block;
                position: relative;
                background-image: -webkit-image-set(url("../img/color_thumb_back.png") 1x, url("../img/color_thumb_back@2x.png") 2x);
                background-size: 8px;
                width: 120px;
                height: 20px;
                                    
                .kuler-swatch {
                    position: absolute;
                    width: 100%;
                    height: 100%;
                    border-radius: 3px;
                    box-shadow: 0 -1px 0 rgba(0,0,0,0.2), 0 1px 0 #fff;
                    
                    .kuler-swatch-block {
                        height: 100%;
                        float: left;
                        
                        &:focus {
                            outline: none;
                            box-shadow: inset 0 0 0 2px rgba(111, 181, 241, 0.7);
                            border-radius: 2px;
                        }
                    }
                    
                    .kuler-block-1 {
                        width: 100%;
                        .border-fixer-upper;
                    }
                    
                    .kuler-block-2 {
                        width: 100%/2;
                        .border-fixer-upper;
                    }

                    .kuler-block-3 {
                        width: 100%/3;
                        .border-fixer-upper;
                    }
                    
                    .kuler-block-4 {
                        width: 100%/4;
                        .border-fixer-upper;
                    }
                    
                    .kuler-block-5 {
                        width: 100%/5;
                        .border-fixer-upper;
                    }
                    
                    .kuler-block-6 {
                        width: 100%/6;
                        .border-fixer-upper;
                    }

                }
            }

            a {
                color: inherit;
                text-decoration: none;
                vertical-align: inherit;
                
                &:focus {
                    outline: none;
                    box-shadow: none;
                    border-radius: 0;
                }
            }
            
            .kuler-swatch-title {
                vertical-align: top;
                padding-left: 5px;
                
                &:focus {
                    outline: none;
                    box-shadow: none;
                    border-radius: 0;
                }
            }
        }
    }
}

.kuler-divider-holder {
    // This nesting lets us effectively have 'left: (30% + 12px)'

    display: block;
    position: absolute;
    top: 15px;
    height: 190px;
    vertical-align: top;
    
    .kuler-divider {
        width: 0px;
        height: 100%;
        border-left: 1px solid #cccccc;
        border-right: 1px solid white;
    }
}

a.kuler-more-info {
    position: absolute;
    bottom: 2px;
    right: 20px;
    padding: 4px 10px 4px 28px;
    height: 16px;
    line-height: 16px ! important;
    
    background: #e5e9e9 url("../img/kuler-icon.svg");
    background-repeat: no-repeat;
    background-size: 15px 15px;
    background-position: 8px 5px;
    
    border: 1px solid #9c9e9e;
    border-radius: 3px 3px 0 0;
    border-bottom: none;
    box-shadow: inset 0 1px 0 white;  // white chisel along top edge
    
    font-family: SourceSansPro;
    font-size: 12px;
    font-weight: @font-weight-semibold;
    color: @heading-color;
    white-space: nowrap;
    text-shadow: 0 1px 0 white;
    &:hover {
        background-color: #edf1f1;
        text-decoration: none;
    }
}

